fixed side gap on navigation

--- a/css/navigation.css
+++ b/css/navigation.css
@@ -37,7 +37,7 @@
   font-weight: bold;
 
   /* SPACING */
-  padding: var(--length-small-4) var(--site-gap-bg);
+  padding: var(--length-small-4) var(--site-gap);
   justify-content: space-between;
 }
 
@@ -162,20 +162,14 @@
   
   .nav-options,
   .navigation {
-    padding: var(--length-medium-1) var(--site-gap);
+    padding: var(--length-small-3) var(--site-gap);
   }
   
 }
 
-/** ALWAYS STATE MEDIA QUERIES IN EM. DUE TO RESOLUTION OF DEVICES (RETINA DISPLAYS) **/
-/** 880px **/
-@media screen and (max-width: 55em) {
 
-  /*$ NAVBAR  $*/
-  .nav-options {
-    padding: var(--length-small-3) var(--site-gap-x-sm);
-  }
-
+/** 1200px **/
+@media screen and (max-width: 75em) {
 
   /*$ HAMBURGER BUTTON */
 
@@ -250,7 +244,7 @@
   /*$ MENU PAGE LAYOUT $*/
 
   #menu {
-    padding: 15rem var(--site-gap-sm) 15rem var(--site-gap-sm) ;
+    padding: var(--site-gap-xl) var(--site-gap-sm) var(--site-gap-xl) var(--site-gap-sm) ;
     
     flex-direction: column;
     align-items: center;
@@ -262,12 +256,7 @@
     bottom: 0;
     left: 0;
     overflow: hidden;
-    /* box-shadow:
-      0px 1px 10px rgba(20, 20, 20, 0.5),
-      0px 2px 10px rgba(20, 20, 20, 0.5),
-      0px 3px 15px rgba(20, 20, 20, 0.5),
-      0px 4px 35px rgba(20, 20, 20, 0.5); */
-    background-color: var(--color-background-primary);
+    background-color: var(--color-background-secondary);
     transition: opacity 750ms ease 150ms, transform 750ms ease 150ms;
   }
 
@@ -283,6 +272,17 @@
 
   /*$ END MENU PAGE LAYOUT $*/
 
+}
+
+
+/** 880px **/
+@media screen and (max-width: 55em) {
+  
+  .nav-options,
+  .navigation {
+    padding: var(--length-small-3) var(--site-gap-x-sm);
+  }
+  
 }
 
 /*$ END RESPONSIVE $*/
